# devops

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .npmrc  .pre-commit-config.yaml  .secrets.baseline  .testmondata-shm  .testmondata-wal  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  auth_mypy_report.txt  contexts.md  coverage.json  docker-compose.prod.yml  docker-compose.yml  justfile  mypy_report.txt  mypy_report_v2.txt  mypy_report_v3.txt  mypy_report_v4.txt  mypy_report_v5.txt  package-lock.json  package.json  progress.txt  progress_archive.md  pyproject.toml  requirements.txt  ruff.toml  worker_logs.txt
.agent/scripts/: recovery.py
.agent/workflows/: ai-solve.md  bug-triage.md  code-review.md  codify-rule.md  deploy.md  doc-audit.md  doc-update.md  evolve-skill.md  lint.md  merge.md  plugin-init.md  rollback.md  session-handover.md  spike.md  task-kickoff.md
.github/workflows/: full-gate.yml
.gitlab/issue_templates/: Bug.md  Requirement.md  TestCase.md
.gitlab/merge_request_templates/: Default.md
agile_module/models/: agile_models.py
agile_module/services/: __init__.py  agile_routing_service.py  gitlab_service.py  iteration_core_service.py  iteration_plan_service.py  sprint_core_service.py  sprint_plan_service.py
archived/docs/: DOCUMENTATION_UPDATE_SUMMARY.md  ENGINEERING_STANDARDIZATION_REPORT.md  GOOGLE_STYLE_COMPLIANCE_REPORT.md  P1_IMPLEMENTATION_REPORT.md  P2_IMPLEMENTATION_PLAN.md  基于GITLAB社区版二开测试管理模块V2.md
archived/test_hub_docs/: BIDIRECTIONAL_SYNC_COMPLETION.md  IDENTITY_MAPPING_PLAN.md  REGISTRATION_SYSTEM_FINAL_REPORT.md  REGISTRATION_SYSTEM_PLAN.md  SERVICE_DESK_ACCESS_METHODS.md  SERVICE_DESK_API.md  SERVICE_DESK_BIDIRECTIONAL_SYNC.md  SERVICE_DESK_COMPLETION_REPORT.md  SERVICE_DESK_FIELD_MAPPING.md  SERVICE_DESK_FINAL_SUMMARY.md  SERVICE_DESK_LOGIN_COMPLETED.md  SERVICE_DESK_LOGIN_FINAL_REPORT.md  SERVICE_DESK_LOGIN_IMPLEMENTATION.md  SERVICE_DESK_SECURITY.md  SERVICE_DESK_TEST_GUIDE.md  SERVICE_DESK_VS_TEST_HUB.md  WEBHOOK_SETUP_GUIDE.md
chaos-sentinel-workspace/iteration-1/: benchmark.json  review_report.html
dagster_repo/assets/: core.py  reports.py
dashboard/: Home.py  utils.py
dashboard/common/: api_client.py
dashboard/pages/: 0_Quality_Monitor.py  10_Metrics_Guard.py  11_Unified_Activities.py  12_Work_Items.py  13_Entity_Alignment.py  14_Delivery_Costs.py  15_Metadata_Governance.py  16_Michael_Feathers_Code_Hotspots.py  17_SPACE_Framework.py  18_Value_Stream.py  19_Strategic_Executive_Cockpit.py  1_Gitprime.py  20_Nexus_FinOps.py  21_DORA_Refined.py  22_Code_Traceability.py  23_Radar_Intelligence.py  2_DORA_Metrics.py  3_Project_Health.py  4_Compliance_Audit.py  5_ABI_Analysis.py  6_User_Profile.py  7_Capitalization_Audit.py  8_Shadow_IT.py  9_Talent_Radar.py
datahub/: recipe_dbt.yml
dbt-pipeline-auditor-workspace/iteration-1/: review_report.html
dbt_project/: package-lock.yml
dbt_project/snapshots/: snp_mdm_identities.sql  snp_mdm_organizations.sql  snp_mdm_projects.sql
dbt_project/tests/: assert_mdm_scd2_uniqueness.sql
devops_collector/: alembic.ini  cli.py  config.py  mq.py  scheduler.py  worker.py
devops_collector/alembic/: env.py
devops_collector/auth/: auth_database.py  auth_router.py  auth_service.py
devops_collector/core/: __init__.py  admin_service.py  ai_analyzer.py  algorithms.py  base_client.py  base_worker.py  business_auth.py  devex_pulse_service.py  exceptions.py  iteration_service.py  management.py  notifiers.py  okr_service.py  organization_service.py  plugin_loader.py  plugin_service.py  promotion_service.py  quality_service.py  registry.py  retention_manager.py  reverse_etl.py  schemas.py  security.py  service_desk_service.py  services.py
devops_collector/management/: __init__.py
devops_collector/models/: __init__.py  audit.py  audit_events.py  base_models.py  customer.py  dependency.py  marts.py  service_desk.py  test_management.py
devops_collector/plugins/: __init__.py
devops_collector/services/: __init__.py  admin_service.py  ai_analyzer.py  audit_service.py  base.py  base_plugin.py  business_auth.py  calendar_service.py  catalog_service.py  data_dict_service.py  diagnostic_service.py  dora_service.py  finance_service.py  identity_mapping_service.py  identity_resolver.py  lineage_service.py  location_service.py  okr_service.py  organization_service.py  plugin_loader.py  plugin_service.py  product_service.py  promotion_service.py  quality_service.py  registry.py  retention_manager.py  reverse_etl.py  security.py  service_desk_service.py  topology_service.py
devops_collector/sql/: ABI_Analysis.sql  Capitalization_Audit.sql  Compliance_Audit.sql  Gitprime.sql  Michael_Feathers_Code_Hotspots.sql  Project_Health.sql  Talent_Radar.sql  User_Profile.sql  Value_Stream.sql  Work_Items.sql
devops_portal/: __init__.py  dependencies.py  main.py  schemas.py  schemas_bi.py  schemas_pulse.py  schemas_traceability.py
devops_portal/static/: index.html  (+1 more)
docs/: AMDP_Design_Specification.md  BI_analysis_results.md  DDAP_Design_Spec.md  DOC_INDEX.md  Identity_Service_Design.md  LAWS_DETAIL.md  MDM_implementation_plan.md  MDM_task.md  PROJECT_MAP.md  architecture-alignment.md
scripts/: analyze_nexus_lifecycle.py  arch_auditor.py  check_data_dict_freshness.py  check_identity_alignment.py  check_imports.py  check_issue_labels.py  check_issue_resolution.py  cleanup_stale_data.py  cli.py  debug_gitlab_auth.py  dependency_check.py  diag_db.py  diag_mq.py  diag_zentao.py  executive_audit_report.py  export_sonarqube_report.py  fix_zentao_links.py  gatekeeper.py  generate_alignment_report.py  generate_data_dictionary.py  generate_project_map.py  import_employees.py  init_calendar.py  init_catalog.py  init_cost_codes.py  init_discovery.py  init_gitlab_mappings.py  init_jenkins_links.py  init_labor_rates.py  init_locations.py  init_mdm_location.py  init_nexus_links.py  init_okrs.py  init_organizations.py  init_products.py  init_products_projects.py  init_purchase_contracts.py  init_rbac.py  init_revenue_contracts.py  init_sonarqube_links.py  (+24 more)
test_module/: __init__.py
(+606 files in other folders)
