[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devops-platform"
version = "3.4.0"
description = "DevOps Data Application Platform"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Netxs Team", email = "netxs2000@163.com"}
]
keywords = ["devops", "gitlab", "zentao", "sonarqube", "nexus", "jenkins", "dora", "metrics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "starlette>=0.49.1",
    "uvicorn>=0.30.0,<1.0.0",
    "python-multipart>=0.0.22,<1.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "python-jose[cryptography]>=3.4.0,<4.0.0",
    "bcrypt>=3.2.0,<5.0.0",
    "pika>=1.3.0,<2.0.0",
    "requests>=2.32.4,<3.0.0",
    "passlib[bcrypt]>=1.7.4",
    "urllib3>=2.6.3",
    "python-dotenv>=1.0.0,<2.0.0",
    "tenacity>=8.0.0,<10.0.0",
    "python-json-logger>=2.0.0,<3.0.0",
    "protobuf>=5.29.6",
    "pandas>=2.2.0,<3.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "httpx>=0.27.0,<1.0.0",
    "aiofiles>=24.0.0,<26.0.0",
    "email-validator>=2.1.0,<3.0.0",
    "dbt-core>=1.8.0,<2.0.0",
    "dbt-postgres>=1.8.0,<2.0.0",
    "watchdog>=6.0.0,<7.0.0",
    "pypinyin>=0.50.0,<1.0.0",
    "cryptography>=46.0.5",
    "rich>=14.3.3",
    "litellm>=1.83.0",
    "typer>=0.24.1",
    "identity-module",
    "asyncpg>=0.31.0",
    "pyjwt>=2.13.0",
    "uuid6>=2025.0.1",
    "notification-kit",
]

[project.optional-dependencies]
dev = [
    # ===== 代码质量与格式 =====
    "black>=24.10.0",
    "ruff>=0.9.0",
    "mypy>=1.15.0,<2.0.0",
    "pylint>=3.3.0,<4.0.0",
    "djhtml>=3.0.6",
    "mdformat>=0.7.21",

    # ===== 测试框架 =====
    "pytest>=9.0.0,<10.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-timeout>=2.3.1",
    "pytest-instafail>=0.5.0",
    "pytest-mock>=3.15.1",
    "pytest-picked>=0.5.1",
    "pytest-recording>=0.13.4",
    "pytest-testmon>=2.2.0",
    "pytest-xdist>=3.8.0",
    "requests-mock>=1.12.0,<2.0.0",
    "selenium>=4.27.0,<5.0.0",
    "webdriver-manager>=4.0.0,<5.0.0",

    # ===== 工具与辅助 =====
    "pip-tools>=7.0.0,<8.0.0",
    "wheel>=0.46.2",
    "vcrpy>=8.1.1",
    "factory-boy>=3.3.3",
    "pre-commit>=4.0.0",
    "pre-commit-hooks>=4.6.0",
    "commitizen>=3.27.0",

    # ===== 文档 =====
    "sphinx>=8.1.0,<9.0.0",
    "sphinx-rtd-theme>=3.0.0,<4.0.0",

    # ===== 安全与质量 =====
    "bandit>=1.9.4",
    "detect-secrets>=1.5.0",
    "safety>=3.7.0",
    "radon>=6.0.0",
    "cyclonedx-bom>=4.0.0",

    # ===== 类型检查 =====
    "types-requests",
    "types-python-dateutil",
    "types-pytz",
]
test = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "requests-mock>=1.12.0,<2.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.1",
]
e2e = [
    "pytest>=9.0.0,<10.0.0",
    "playwright>=1.49.0,<2.0.0",
    "pytest-playwright>=0.6.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/netxs2000/devops"
Documentation = "https://github.com/netxs2000/devops/README.md"
Repository = "https://github.com/netxs2000/devops"
Issues = "https://github.com/netxs2000/devops/projects"

[project.scripts]
devops = "devops_collector.cli:main"
devops-gate = "scripts.gatekeeper:main"
devops-progress = "scripts.progress_manager:main"

[tool.setuptools]
packages = ["devops_collector", "devops_portal", "servicedesk_module", "agile_module", "test_module"]

[tool.setuptools.package-data]
devops_collector = ["sql/*.sql"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --timeout=30 -m 'not slow' --instafail"
env = [
    "DEVOPS_SKIP_AUDIT=true",
]
testpaths = [
    "tests/unit",
    "tests/integration",
    "tests/dagster_repo",
    "tests/dbt_project",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: 标记为慢速测试 (默认非显式排除)",
    "smoke: 冒烟测试 (快速验证核心功能)",
    "reliability: 幂等性/一致性验证测试",
    "api: 快速业务集成测试 (Router/DB/Service)",
    "ui: 重型浏览器集成测试 (Selenium/Playwright)",
]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '/(\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|build|dist)/'

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
exclude = [
    'devops_collector/plugins/sonarqube/.*',
    'devops_collector/plugins/jenkins/.*',
    'devops_collector/plugins/nexus/.*',
    'devops_collector/plugins/jfrog/.*',
    'devops_collector/plugins/wecom/.*',
    'devops_collector/alembic/.*',
]

[[tool.mypy.overrides]]
module = [
    "requests.*",
    "dateutil.*",
    "pytz.*",
    "pika.*",
    "tenacity.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "devops_collector.plugins.*",
    "devops_collector.alembic.*",
]
ignore_errors = true

[tool.coverage.run]
source = ["devops_collector", "devops_portal"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "devops_collector/plugins/jfrog/*",
    "devops_collector/plugins/jira/*",
    "devops_collector/plugins/wecom/*",
    "devops_collector/plugins/jenkins/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.uv]
index-url = "http://192.168.5.64:8081/repository/group-pypi/simple"
extra-index-url = ["https://pypi.org/simple"]
allow-insecure-host = ["192.168.5.64"]

[tool.uv.sources]
identity-module = { path = "../amdp/identity_module", editable = true }
notification-kit = { path = "../amdp/notification-kit" }
